--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="flex">
         <h2>BIGGESTORANGE</h2>
-        <div  class="icon"><a href="https://www.instagram.com/biiggestorange/"><img src="imgs/ig_logo.png" alt=""></a></div>
+        <a href="https://www.instagram.com/biiggestorange/" class="social-link">IG</a>
     </header>
     <br>
     <div class="flex">
@@ -20,16 +20,16 @@
                     <p>A passion project I pursued in December 2023. I made a bunch of album cover redesigns of some of my favorite albums. I've put the best ones on display here.</p>
                     <br>
                     <div class="gallery">
-                        <img src="imgs\album_cover (1).jpg" alt="">
-                        <img src="imgs\album_cover (2).jpg" alt="">
-                        <img src="imgs\album_cover (3).jpg" alt="">
-                        <img src="imgs\album_cover (4).jpg" alt="">
-                        <img src="imgs\album_cover (5).jpg" alt="">
-                        <img src="imgs\album_cover (6).jpg" alt="">
-                        <img src="imgs\album_cover (7).jpg" alt="">
-                        <img src="imgs\album_cover (8).jpg" alt="">
-                        <img src="imgs\album_cover (9).jpg" alt="">
-                        <img src="imgs\album_cover (10).jpg" alt="">
+                        <img src="imgs\album_cover (1).webp" alt="">
+                        <img src="imgs\album_cover (2).webp" alt="">
+                        <img src="imgs\album_cover (3).webp" alt="">
+                        <img src="imgs\album_cover (4).webp" alt="">
+                        <img src="imgs\album_cover (5).webp" alt="">
+                        <img src="imgs\album_cover (6).webp" alt="">
+                        <img src="imgs\album_cover (7).webp" alt="">
+                        <img src="imgs\album_cover (8).webp" alt="">
+                        <img src="imgs\album_cover (9).webp" alt="">
+                        <img src="imgs\album_cover (10).webp" alt="">
                     </div>
                 </details>
                 <details id="hm-social">
@@ -37,12 +37,12 @@
                     <h3>Originally posted for <a href=https://www.instagram.com/p/CyB6Z0yyhNY/?img_index=1">Instagram</a></h3> 
                     <br>
                     <div class="gallery">
-                            <img src="imgs\hm_1.jpg" alt="">
-                            <img src="imgs\hm_2.gif" alt="">
-                            <img src="imgs\hm_3.gif" alt="">
-                            <img src="imgs\hm_4.gif" alt="">
-                            <img src="imgs\hm_5.gif" alt="">
-                            <img src="imgs\hm_6.gif" alt="">
+                            <img src="imgs\hm_1.webp" alt="">
+                            <img src="imgs\hm_2.webp" alt="">
+                            <img src="imgs\hm_3.webp" alt="">
+                            <img src="imgs\hm_4.webp" alt="">
+                            <img src="imgs\hm_5.webp" alt="">
+                            <img src="imgs\hm_6.webp" alt="">
                     </div>
                 </details>
                 <details id="poster-designs">
@@ -50,34 +50,34 @@
                     <h3></h3>
                     <div class="phone-posters">
                         <div class="gallery">
-                            <img src="imgs/poster (0).jpg" alt="">
-                            <img src="imgs/poster (1).jpg" alt="">
-                            <img src="imgs/poster (2).jpg" alt="">
-                            <img src="imgs/poster (3).jpg" alt="">
-                            <img src="imgs/poster (4).jpg" alt="">
-                            <img src="imgs/poster (5).jpg" alt="">
-                            <img src="imgs/poster (6).jpg" alt="">
-                            <img src="imgs/poster (7).jpg" alt="">
-                            <img src="imgs/poster (8).jpg" alt="">
-                            <img src="imgs/poster (9).jpg" alt="">
-                            <img src="imgs/poster (10).jpg" alt="">
+                            <img src="imgs/poster (0).webp" alt="">
+                            <img src="imgs/poster (1).webp" alt="">
+                            <img src="imgs/poster (2).webp" alt="">
+                            <img src="imgs/poster (3).webp" alt="">
+                            <img src="imgs/poster (4).webp" alt="">
+                            <img src="imgs/poster (5).webp" alt="">
+                            <img src="imgs/poster (6).webp" alt="">
+                            <img src="imgs/poster (7).webp" alt="">
+                            <img src="imgs/poster (8).webp" alt="">
+                            <img src="imgs/poster (9).webp" alt="">
+                            <img src="imgs/poster (10).webp" alt="">
                         </div>
                     </div>
                     <div class="bigscreen-posters">
                         <div class="v-gallery">
-                            <img src="imgs/poster (0).jpg" alt="">
-                            <img src="imgs/poster (1).jpg" alt="">
-                            <img src="imgs/poster (2).jpg" alt="">
-                            <img src="imgs/poster (3).jpg" alt="">
-                            <img src="imgs/poster (4).jpg" alt="">
-                            <img src="imgs/poster (5).jpg" alt="">
+                            <img src="imgs/poster (0).webp" alt="">
+                            <img src="imgs/poster (1).webp" alt="">
+                            <img src="imgs/poster (2).webp" alt="">
+                            <img src="imgs/poster (3).webp" alt="">
+                            <img src="imgs/poster (4).webp" alt="">
+                            <img src="imgs/poster (5).webp" alt="">
                         </div>
                         <div class="v-gallery">
-                            <img src="imgs/poster (6).jpg" alt="">
-                            <img src="imgs/poster (7).jpg" alt="">
-                            <img src="imgs/poster (8).jpg" alt="">
-                            <img src="imgs/poster (9).jpg" alt="">
-                            <img src="imgs/poster (10).jpg" alt="">
+                            <img src="imgs/poster (6).webp" alt="">
+                            <img src="imgs/poster (7).webp" alt="">
+                            <img src="imgs/poster (8).webp" alt="">
+                            <img src="imgs/poster (9).webp" alt="">
+                            <img src="imgs/poster (10).webp" alt="">
                         </div>
                     </div>
                 </details>
@@ -87,43 +87,43 @@
                     <p>Logo sketches</p>
                     <div class="phone-posters">
                         <div class="gallery">
-                            <img src="imgs\SW_concept_1 (1).JPG" alt="">
-                            <img src="imgs\SW_concept_1 (2).JPG" alt="">
-                            <img src="imgs\SW_concept_1 (4).JPG" alt="">
+                            <img src="imgs\SW_concept_1 (1).webp" alt="">
+                            <img src="imgs\SW_concept_1 (2).webp" alt="">
+                            <img src="imgs\SW_concept_1 (4).webp" alt="">
                         </div>
                     </div>
                     <div class="bigscreen-posters">
                         <div class="v-gallery">
-                            <img src="imgs\SW_concept_1 (1).JPG" alt="">
-                            <img src="imgs\SW_concept_1 (2).JPG" alt="">
+                            <img src="imgs\SW_concept_1 (1).webp" alt="">
+                            <img src="imgs\SW_concept_1 (2).webp" alt="">
                         </div>
                         <div class="v-gallery">
                             
-                            <img src="imgs\SW_concept_1 (4).JPG" alt="">
+                            <img src="imgs\SW_concept_1 (4).webp" alt="">
                         </div>
                     </div>
                         <p>Final Logo</p>
                         <div class="gallery">
-                            <img src="imgs\Stephenson_logo_1.png" alt="Blue Stephenson Water Restoration Logo">
-                            <img src="imgs\Stephenson_logo_2.png" alt="Blue Stephenson Water Restoration Logo & type">
+                            <img src="imgs\Stephenson_logo_1.webp" alt="Blue Stephenson Water Restoration Logo">
+                            <img src="imgs\Stephenson_logo_2.webp" alt="Blue Stephenson Water Restoration Logo & type">
                         </div>
                         <p>As can be seen above, the logo went through a few iterations before I landed on this umbrella-palm tree combo. </p>
                         <br>
                         <p>Web Desgin</p>
                         <div class="phone-posters">
                             <div class="gallery">
-                                <img src="imgs\Stephenson_web_1.png" alt="">
-                                <img src="imgs\Stephenson_web_2.png" alt="">
-                                <img src="imgs\Stephenson_web_3.png" alt="">
+                                <img src="imgs\Stephenson_web_1.webp" alt="">
+                                <img src="imgs\Stephenson_web_2.webp" alt="">
+                                <img src="imgs\Stephenson_web_3.webp" alt="">
                             </div>
                         </div>
                         <div class="bigscreen-posters">
                             <div class="v-gallery">
-                                <img src="imgs\Stephenson_web_3.png" alt="">
-                                <img src="imgs\Stephenson_web_2.png" alt="">
+                                <img src="imgs\Stephenson_web_3.webp" alt="">
+                                <img src="imgs\Stephenson_web_2.webp" alt="">
                             </div>
                             <div class="v-gallery">
-                                <img src="imgs\Stephenson_web_1.png" alt=""> 
+                                <img src="imgs\Stephenson_web_1.webp" alt=""> 
                             </div>
                         </div>
                         <p>When making the website, I picked a predominantly blue color palette to match the brand's identity as a pool water restoration company. </p>
@@ -131,18 +131,26 @@
                         <h3>Ambrosia Sun</h3>
                         <p>Logo Sketches</p>
                         <div class="gallery">
-                            <img src="imgs\pothos_sketch (1).jpg" alt="">
-                            <img src="imgs\pothos_sketch (2).jpg" alt="">
+                            <img src="imgs\pothos_sketch (1).webp" alt="">
+                            <img src="imgs\pothos_sketch (2).webp" alt="">
                         </div>
                         <p>Final Logo</p>
                         <div class="gallery">
-                            <img src="imgs\pothos_logo_2.png" alt="">
-                            <img src="imgs\pothos_logo_1.png" alt="">
+                            <img src="imgs\pothos_logo_2.webp" alt="">
+                            <img src="imgs\pothos_logo_1.webp" alt="">
                             <p>Typeface</p>
-                            <img src="imgs\pothos_type_1 (1).png" alt="">
+                            <img src="imgs\pothos_type_1 (1).webp" alt="">
                         </div>
                         <p>Pothos is a nursery, and I wanted to make a logo for it. I knew what I wanted the logo to look like old pottery paintings, so I researched what ancient greek pottery looked like and modeled my logo after it.</p>
                 </details>
+                <details id="about">
+                    <summary>XX&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ABOUT</summary>
+                    <p>Highly Motivated and multi-disciplinary self-taught Graphic Designer of 4 years. Offering a strong foundation in Print Design and Brand Design with a proven ability to drive efficiency, deliver successful outcomes and collaborate within cross-functional teams. Learning UI/UX and Front-End Web Development to expand my Design Skills and technical understanding.</p>
+                    <br>
+                    <p>Roberto Garcia</p>
+                    <p>bigorangecreations@gmail.com</p>
+                    <p>Email for inquiries</p>
+                </details>
     </div>
 </body>
-</html>
+</html>vgc g
