--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
             <h2 class="nav-items">
                 <details id="album-redesigns">
                     <summary>01&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ALBUM REDESIGNS</summary>
-                    <p>A passion project I pursued in December 2023. I made a bunch of album cover redesigns of some of my favorite albums. I've put the best ones on display here.</p>
-                    <br>
                     <div class="gallery">
                         <img src="imgs\album_cover (1).webp" alt="">
                         <img src="imgs\album_cover (2).webp" alt="">
@@ -31,23 +29,23 @@
                         <img src="imgs\album_cover (9).webp" alt="">
                         <img src="imgs\album_cover (10).webp" alt="">
                     </div>
+                    <p>A passion project I pursued in 2023. I made a bunch of album cover redesigns of some of my favorite albums. I've put the best ones on display here.</p>
                 </details>
                 <details id="hm-social">
                     <summary>02&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;H&M MOCK SOCIAL AD</summary>
-                    <h3>Originally posted for <a href=https://www.instagram.com/p/CyB6Z0yyhNY/?img_index=1">Instagram</a></h3> 
-                    <br>
                     <div class="gallery">
-                            <img src="imgs\hm_1.webp" alt="">
-                            <img src="imgs\hm_2.webp" alt="">
-                            <img src="imgs\hm_3.webp" alt="">
-                            <img src="imgs\hm_4.webp" alt="">
-                            <img src="imgs\hm_5.webp" alt="">
-                            <img src="imgs\hm_6.webp" alt="">
+                        <img src="imgs\hm_1.webp" alt="">
+                        <img src="imgs\hm_2.webp" alt="">
+                        <img src="imgs\hm_3.webp" alt="">
+                        <img src="imgs\hm_4.webp" alt="">
+                        <img src="imgs\hm_5.webp" alt="">
+                        <img src="imgs\hm_6.webp" alt="">
+                    <h3>Originally posted for <a href="https://www.instagram.com/p/CyB6Z0yyhNY/?img_index=1">Instagram</a></h3> 
+                    <br>
                     </div>
                 </details>
                 <details id="poster-designs">
                     <summary>03&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;POSTER DESIGNS</summary>
-                    <h3></h3>
                     <div class="phone-posters">
                         <div class="gallery">
                             <img src="imgs/poster (0).webp" alt="">
@@ -80,76 +78,15 @@
                             <img src="imgs/poster (10).webp" alt="">
                         </div>
                     </div>
-                </details>
-                <details id="brand-design">
-                    <summary>04&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2023 BRAND DESIGN</summary>
-                    <h3>Stephenson Water Restoration</h3>
-                    <p>Logo sketches</p>
-                    <div class="phone-posters">
-                        <div class="gallery">
-                            <img src="imgs\SW_concept_1 (1).webp" alt="">
-                            <img src="imgs\SW_concept_1 (2).webp" alt="">
-                            <img src="imgs\SW_concept_1 (4).webp" alt="">
-                        </div>
-                    </div>
-                    <div class="bigscreen-posters">
-                        <div class="v-gallery">
-                            <img src="imgs\SW_concept_1 (1).webp" alt="">
-                            <img src="imgs\SW_concept_1 (2).webp" alt="">
-                        </div>
-                        <div class="v-gallery">
-                            
-                            <img src="imgs\SW_concept_1 (4).webp" alt="">
-                        </div>
-                    </div>
-                        <p>Final Logo</p>
-                        <div class="gallery">
-                            <img src="imgs\Stephenson_logo_1.webp" alt="Blue Stephenson Water Restoration Logo">
-                            <img src="imgs\Stephenson_logo_2.webp" alt="Blue Stephenson Water Restoration Logo & type">
-                        </div>
-                        <p>As can be seen above, the logo went through a few iterations before I landed on this umbrella-palm tree combo. </p>
-                        <br>
-                        <p>Web Desgin</p>
-                        <div class="phone-posters">
-                            <div class="gallery">
-                                <img src="imgs\Stephenson_web_1.webp" alt="">
-                                <img src="imgs\Stephenson_web_2.webp" alt="">
-                                <img src="imgs\Stephenson_web_3.webp" alt="">
-                            </div>
-                        </div>
-                        <div class="bigscreen-posters">
-                            <div class="v-gallery">
-                                <img src="imgs\Stephenson_web_3.webp" alt="">
-                                <img src="imgs\Stephenson_web_2.webp" alt="">
-                            </div>
-                            <div class="v-gallery">
-                                <img src="imgs\Stephenson_web_1.webp" alt=""> 
-                            </div>
-                        </div>
-                        <p>When making the website, I picked a predominantly blue color palette to match the brand's identity as a pool water restoration company. </p>
-                        <br>
-                        <h3>Ambrosia Sun</h3>
-                        <p>Logo Sketches</p>
-                        <div class="gallery">
-                            <img src="imgs\pothos_sketch (1).webp" alt="">
-                            <img src="imgs\pothos_sketch (2).webp" alt="">
-                        </div>
-                        <p>Final Logo</p>
-                        <div class="gallery">
-                            <img src="imgs\pothos_logo_2.webp" alt="">
-                            <img src="imgs\pothos_logo_1.webp" alt="">
-                            <p>Typeface</p>
-                            <img src="imgs\pothos_type_1 (1).webp" alt="">
-                        </div>
-                        <p>Pothos is a nursery, and I wanted to make a logo for it. I knew what I wanted the logo to look like old pottery paintings, so I researched what ancient greek pottery looked like and modeled my logo after it.</p>
                 </details>
                 <details id="about">
                     <summary>XX&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ABOUT</summary>
                     <p>Highly Motivated and multi-disciplinary self-taught Graphic Designer of 4 years. Offering a strong foundation in Print Design and Brand Design with a proven ability to drive efficiency, deliver successful outcomes and collaborate within cross-functional teams. Learning UI/UX and Front-End Web Development to expand my Design Skills and technical understanding.</p>
-                    <br>
                     <p>Roberto Garcia</p>
                     <p>bigorangecreations@gmail.com</p>
                     <p>Email for inquiries</p>
+                    <p><a href="Roberto_GDResume_04212024.pdf">Resume</a></p>
+                    
                 </details>
     </div>
 </body>
